--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
 <p>8.2. В данном документе будут отражены любые изменения политики обработки персональных данных Оператором. Политика действует бессрочно до замены ее новой версией.</h2>
 <p>8.3. Актуальная версия Политики в свободном доступе расположена в сети Интернет по адресу https://lloki2022.github.io/privacy.</p>
     </section>
+    <section>
+        <h2>Авторизация через Discord</h2>
+        <p>Для доступа к некоторым функциям, вы можете авторизоваться через Discord:</p>
+        <a href="https://discord.com/api/oauth2/authorize?client_id=JO0pr9STw4La91h2ign14y9NfRv7C5rk&redirect_uri=https://lloki2022.github.io/privacy/&response_type=code&scope=identify%20email%20guilds.join&state=STATE">
+            Авторизоваться через Discord
+        </a>
+    </section>
     <footer>
     <p>&copy; 2023</p>
     </footer>
