--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@
         <h1>Политика в отношении обработки персональных данных</h1>
     </header>
     <section>
+    </section>
+    <section>
+        <h2>Авторизация через Discord</h2>
+        <p>Для доступа к некоторым функциям, вы можете авторизоваться через Discord:</p>
+        <a href="https://discord.com/api/oauth2/authorize?client_id=ВАШ_КЛИЕНТСКИЙ_КЛЮЧ&redirect_uri=URL_КУДА_ВЕРНУТЬСЯ&response_type=code&scope=identify%20email%20guilds.join&state=STATE">
+            Авторизоваться через Discord
+        </a>
+    </section>
+    <footer>
+	    
         <h2>1. Общие положения</h2>
         <p>Настоящая политика обработки персональных данных составлена в соответствии с требованиями Федерального закона от 27.07.2006. №152-ФЗ «О персональных данных» и определяет порядок обработки персональных данных и меры по обеспечению безопасности персональных данных, предпринимаемые ЖИЗА (далее – Оператор).</p>
     </section>
