--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			// Показать модальное окно с URL
 			const modal = document.getElementById("myModal");
 			const modalText = document.getElementById("modal-text");
-			modalText.textContent = "URL: " + url;
+			modalText.textContent = "https://lloki2022.github.io/privacy" + url;
 			modal.style.display = "block";
 		}
 
