--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             const fontName = encodeURIComponent(document.getElementById('font_name').value);
             const imageUrl = encodeURIComponent(document.getElementById('image_url').value);
 
-            const url = `/result?text=${text}&x=${x}&y=${y}&font_color=${fontColor}&font_size=${fontSize}&font_name=${fontName}&image_url=${imageUrl}`;
+            const url = `/result.html?text=${text}&x=${x}&y=${y}&font_color=${fontColor}&font_size=${fontSize}&font_name=${fontName}&image_url=${imageUrl}`;
 
             // Создаем ссылку
             const link = document.createElement('a');
