--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
     <h1>Текст</h1>
     <form id="imageForm">
-        <label for="text">Text:</label>
+        <label for="Текст">Text:</label>
         <input type="text" name="text" id="text" value="Текст"><br>
 
         <label for="x">X:</label>
