--- a/result.html
+++ b/result.html
@@ -14,7 +14,7 @@
 <body>
     <h1>Result</h1>
     <canvas id="resultCanvas"></canvas> <!-- используем canvas для рисования текста на изображении -->
-    <img src="https://lloki2022.github.io/privacy/result.png?text=%D0%A2%D0%B5%D0%BA%D1%81%D1%82&x=50&y=50&font_color=%23de1717&font_size=200&font_name=Verdana&image_url=https%3A%2F%2Fimg001.prntscr.com%2Ffile%2Fimg001%2FDndak4wgSEyTTDngKhFovg.png" alt="Result Image">
+    <img src="https://lloki2022.github.io/privacy/result.html?text=%D0%A2%D0%B5%D0%BA%D1%81%D1%82&x=50&y=50&font_color=%23000000&font_size=20&font_name=Arial&image_url=https%3A%2F%2Fimg001.prntscr.com%2Ffile%2Fimg001%2FDndak4wgSEyTTDngKhFovg.png" alt="Result Image">
     
     <script>
         // Получаем URL изображения и параметры текста и настроек
