--- a/result.html
+++ b/result.html
@@ -12,8 +12,8 @@
     </style>
 </head>
 <body>
-    <canvas id="resultCanvas"></canvas> <!-- используем canvas для рисования текста на изображении -->
-    <img id="resultImage" src="" alt="Result Image"> <!-- добавляем тег <img> для отображения изображения -->
+    <!-- Изображение будет отображаться через тег <img src=...> -->
+    <img id="resultImage" src="" alt="Result Image">
 
     <script>
         // Получаем URL изображения и параметры текста и настроек
@@ -26,22 +26,38 @@
         const fontSize = parseInt(urlParams.get('font_size'));
         const fontName = decodeURIComponent(urlParams.get('font_name'));
 
-        // Отображаем изображение на canvas и рисуем на нем текст с заданными настройками
-        const canvas = document.getElementById('resultCanvas');
-        const ctx = canvas.getContext('2d');
+        // Создаем новый Image объект
         const image = new Image();
+
+        // Устанавливаем обработчик события onload для изображения
         image.onload = function() {
+            // Создаем холст
+            const canvas = document.createElement('canvas');
+            const ctx = canvas.getContext('2d');
+
+            // Устанавливаем размеры холста равные размерам изображения
             canvas.width = image.width;
             canvas.height = image.height;
+
+            // Рисуем изображение на холсте
             ctx.drawImage(image, 0, 0);
+
+            // Устанавливаем шрифт и цвет для текста
             ctx.font = `${fontSize}px ${fontName}`;
             ctx.fillStyle = fontColor;
-            ctx.fillText(text, x, y);
-        }
-        image.src = imageUrl;
 
-        // Устанавливаем атрибут src тега <img> на значение imageUrl
-        document.getElementById('resultImage').src = imageUrl;
+            // Рисуем текст на холсте
+            ctx.fillText(text, x, y);
+
+            // Получаем данные холста в формате base64
+            const imageDataURL = canvas.toDataURL();
+
+            // Устанавливаем данные base64 в качестве источника изображения для тега <img>
+            document.getElementById('resultImage').src = imageDataURL;
+        };
+
+        // Устанавливаем источник изображения для объекта Image
+        image.src = imageUrl;
     </script>
 </body>
 </html>
