--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
             const text = document.getElementById('text').value;
             const x = parseInt(document.getElementById('x').value);
             const y = parseInt(document.getElementById('y').value);
-           // const fontColor = document.getElementById('font_color').value;
-            const fontColor = encodeURIComponent(document.getElementById('font_color').value)
+            const fontColor = document.getElementById('font_color').value;
             const fontSize = parseInt(document.getElementById('font_size').value);
             const fontName = document.getElementById('font_name').value;
             const imageUrl = document.getElementById('image_url').value;
