--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             const imageUrl = document.getElementById('image_url').value;
         
             // Преобразуем значение fontColor в нужный формат без кодирования
-            const color = fontColor.replace('#', '%23');
+            // const color = fontColor.replace('#', '%23');
         
             // Формируем URL с параметрами
             const url = `/result.html?text=${text}&x=${x}&y=${y}&font_color=${fontColor}&font_size=${fontSize}&font_name=${fontName}&image_url=${imageUrl}`;
