--- a/index.html
+++ b/index.html
@@ -69,10 +69,21 @@
 
         <label for="font_name">Шрифта:</label>
         <select name="font_name" id="font_name">
-            <option value="Arial">Arial</option>
-            <option value="Times New Roman">Times New Roman</option>
-            <option value="Verdana">Verdana</option>
-            <!-- Добавьте другие варианты шрифтов по вашему выбору -->
+            <option value="Arial Narrow">Arial Narrow</option>
+            <option value="Century Gothic">Century Gothic</option>
+            <option value="Book Antiqua">Book Antiqua</option>
+            <option value="Franklin Gothic Medium">Franklin Gothic Medium</option>
+            <option value="Copperplate">Copperplate</option>
+            <option value="Garamond">Garamond</option>
+            <option value="Lucida Sans Unicode">Lucida Sans Unicode</option>
+            <option value="Segoe UI">Segoe UI</option>
+            <option value="MS Sans Serif">MS Sans Serif</option>
+            <option value="Old English Text MT">Old English Text MT</option>
+            <option value="Rockwell">Rockwell</option>
+            <option value="SimSun">SimSun</option>
+            <option value="Yu Gothic">Yu Gothic</option>
+            <option value="Mongolian Baiti">Mongolian Baiti</option>
+
         </select><br>
 
         <label for="image_url">URL картинки:</label>
