--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
             //const fontColor = document.getElementById('font_color').value;
             const fontColor = encodeURIComponent(document.getElementById('font_color').value)
             const fontSize = document.getElementById('font_size').value;
-            const fontName = document.getElementById('font_name').value;
+            //const fontName = document.getElementById('font_name').value;
+            const fontName = encodeURIComponent(document.getElementById('font_name').value)
             const imageUrl = document.getElementById('image_url').value;
         
             // Преобразуем значение fontColor в нужный формат без кодирования
