--- a/result.html
+++ b/result.html
@@ -3,6 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    	<!-- Primary Meta Tags -->
+	<title>IMGENX - Image generator by URL</title>
+	<meta name="title" content="IMGENX - Image generator by URL">
+	<meta name="description" content="A powerful tool for generating images fully built on the basis of a special URL pattern">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://imgenx.vercel.app/">
+	<meta property="og:title" content="IMGENX - Image generator by URL">
+	<meta property="og:description" content="A powerful tool for generating images fully built on the basis of a special URL pattern">
+	<meta property="og:image" content="/banner.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://imgenx.vercel.app/">
+	<meta property="twitter:title" content="IMGENX - Image generator by URL">
+	<meta property="twitter:description" content="A powerful tool for generating images fully built on the basis of a special URL pattern">
+	<meta property="twitter:image" content="/banner.png">
+
+	<meta name="author" content="ghtx280">
+	<meta name="robots" content="index, follow">
+	<link rel="canonical" href="https://imgenx.vercel.app/">
+	<meta http-equiv="content-language" content="en">
+	<meta name="copyright" content="Copyright © 2024 IMGENX">
+    
     <title>lLoki</title>
     <style>
         img {
