--- a/result.html
+++ b/result.html
@@ -11,21 +11,21 @@
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://imgenx.vercel.app/">
+	<meta property="og:url" content="https://github.com/lLoki2022/privacy/">
 	<meta property="og:title" content="IMGENX - Image generator by URL">
 	<meta property="og:description" content="A powerful tool for generating images fully built on the basis of a special URL pattern">
 	<meta property="og:image" content="/banner.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://imgenx.vercel.app/">
+	<meta property="twitter:url" content="https://github.com/lLoki2022/privacy/">
 	<meta property="twitter:title" content="IMGENX - Image generator by URL">
 	<meta property="twitter:description" content="A powerful tool for generating images fully built on the basis of a special URL pattern">
 	<meta property="twitter:image" content="/banner.png">
 
 	<meta name="author" content="ghtx280">
 	<meta name="robots" content="index, follow">
-	<link rel="canonical" href="https://imgenx.vercel.app/">
+	<link rel="canonical" href="https://github.com/lLoki2022/privacy/">
 	<meta http-equiv="content-language" content="en">
 	<meta name="copyright" content="Copyright © 2024 IMGENX">
     
