--- a/result.html
+++ b/result.html
@@ -14,14 +14,14 @@
 	<meta property="og:url" content="https://github.com/lLoki2022/privacy/">
 	<meta property="og:title" content="IMGENX - Image generator by URL">
 	<meta property="og:description" content="A powerful tool for generating images fully built on the basis of a special URL pattern">
-	<meta property="og:image" content="/banner.png">
+	<meta property="og:image" content="https://lloki2022.github.io/privacy/banner.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://github.com/lLoki2022/privacy/">
 	<meta property="twitter:title" content="IMGENX - Image generator by URL">
 	<meta property="twitter:description" content="A powerful tool for generating images fully built on the basis of a special URL pattern">
-	<meta property="twitter:image" content="/banner.png">
+	<meta property="twitter:image" content="https://lloki2022.github.io/privacy/banner.png">
 
 	<meta name="author" content="ghtx280">
 	<meta name="robots" content="index, follow">
