--- a/result.html
+++ b/result.html
@@ -21,7 +21,7 @@
 	<meta property="twitter:url" content="https://github.com/lLoki2022/privacy/">
 	<meta property="twitter:title" content="IMGENX - Image generator by URL">
 	<meta property="twitter:description" content="A powerful tool for generating images fully built on the basis of a special URL pattern">
-	<meta property="twitter:image" content="hhttps://lloki2022.github.io/privacy/result.html?text=Текст&x=50&y=50&font_color=%23eb0f0f&font_size=20&font_name=Yu%20Gothic&image_url=https://img001.prntscr.com/file/img001/Dndak4wgSEyTTDngKhFovg.png">
+	<meta property="twitter:image" content="https://lloki2022.github.io/privacy/result.html?text=Текст&x=50&y=50&font_color=%23eb0f0f&font_size=20&font_name=Yu%20Gothic&image_url=https://img001.prntscr.com/file/img001/Dndak4wgSEyTTDngKhFovg.png">
 
 	<meta name="author" content="ghtx280">
 	<meta name="robots" content="index, follow">
