--- a/result.html
+++ b/result.html
@@ -4,30 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    	<!-- Primary Meta Tags -->
-	<title>IMGENX - Image generator by URL</title>
-	<meta name="title" content="IMGENX - Image generator by URL">
-	<meta name="description" content="A powerful tool for generating images fully built on the basis of a special URL pattern">
+<img src="https://img001.prntscr.com/file/img001/Dndak4wgSEyTTDngKhFovg.png" alt="Картинка с текстом">
 
-	<!-- Open Graph / Facebook -->
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://github.com/lLoki2022/privacy/">
-	<meta property="og:title" content="IMGENX - Image generator by URL">
-	<meta property="og:description" content="A powerful tool for generating images fully built on the basis of a special URL pattern">
-	<meta property="og:image" content="https://lloki2022.github.io/privacy/result.html?text=Текст&x=50&y=50&font_color=%23eb0f0f&font_size=20&font_name=Yu%20Gothic&image_url=https://img001.prntscr.com/file/img001/Dndak4wgSEyTTDngKhFovg.png">
-
-	<!-- Twitter -->
-	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://github.com/lLoki2022/privacy/">
-	<meta property="twitter:title" content="IMGENX - Image generator by URL">
-	<meta property="twitter:description" content="A powerful tool for generating images fully built on the basis of a special URL pattern">
-	<meta property="twitter:image" content="https://lloki2022.github.io/privacy/result.html?text=Текст&x=50&y=50&font_color=%23eb0f0f&font_size=20&font_name=Yu%20Gothic&image_url=https://img001.prntscr.com/file/img001/Dndak4wgSEyTTDngKhFovg.png">
-
-	<meta name="author" content="ghtx280">
-	<meta name="robots" content="index, follow">
-	<link rel="canonical" href="https://github.com/lLoki2022/privacy/">
-	<meta http-equiv="content-language" content="en">
-	<meta name="copyright" content="Copyright © 2024 IMGENX">
     
     <title>lLoki</title>
     <style>
