--- a/result.html
+++ b/result.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-<img src="https://img001.prntscr.com/file/img001/Dndak4wgSEyTTDngKhFovg.png" alt="Картинка с текстом">
+<img src="https://media.discordapp.net/attachments/1169281180785451168/1237808743316586657/image.png?ex=663cfeb9&is=663bad39&hm=731aff1d329c9dfc69d879ee60cd79919412d5e37361d100bf5bf5177ab8d166&=&format=webp&quality=lossless" alt="Картинка с текстом">
 
     
     <title>lLoki</title>
