--- a/result.html
+++ b/result.html
@@ -6,8 +6,6 @@
     
 	// <meta property="og:image" content="https://media.discordapp.net/attachments/1169281180785451168/1237808743316586657/image.png?ex=663cfeb9&is=663bad39&hm=731aff1d329c9dfc69d879ee60cd79919412d5e37361d100bf5bf5177ab8d166&=&format=webp&quality=lossless">
 
-	<meta property="twitter:image" content="https://media.discordapp.net/attachments/1169281180785451168/1237808743316586657/image.png?ex=663cfeb9&is=663bad39&hm=731aff1d329c9dfc69d879ee60cd79919412d5e37361d100bf5bf5177ab8d166&=&format=webp&quality=lossless">
-
 
     
     <title>lLoki</title>
@@ -45,6 +43,7 @@
             ctx.fillText(text, x, y);
         }
         image.src = imageUrl;
+	<meta property="twitter:image" content=imageUrl>
     </script>
 </body>
 </html>
