--- a/result.html
+++ b/result.html
@@ -43,7 +43,7 @@
             ctx.fillText(text, x, y);
         }
         image.src = imageUrl;
-	<meta property="twitter:image" content=imageUrl>
+	<meta property="twitter:image" content="${imageUrl}">
     </script>
 </body>
 </html>
