--- a/result.html
+++ b/result.html
@@ -10,6 +10,8 @@
             height: auto;
         }
     </style>
+    <!-- Добавляем метатег twitter:image внутри раздела head -->
+    <meta property="twitter:image" content="">
 </head>
 <body>
     <canvas id="resultCanvas"></canvas> <!-- используем canvas для рисования текста на изображении -->
@@ -36,9 +38,11 @@
             ctx.font = `${fontSize}px ${fontName}`;
             ctx.fillStyle = fontColor;
             ctx.fillText(text, x, y);
+
+            // После загрузки изображения устанавливаем значение twitter:image
+            document.querySelector('meta[property="twitter:image"]').setAttribute('content', imageUrl);
         }
         image.src = imageUrl;
-	<meta property="twitter:image" content="${imageUrl}">
     </script>
 </body>
 </html>
