--- a/result.html
+++ b/result.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!-- Добавлен тег meta для Twitter -->
     <meta property="twitter:image" content="${imageUrl}">
     
     <title>lLoki</title>
