--- a/result.html
+++ b/result.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <meta property="twitter:image" content="https://lloki2022.github.io/privacy/result.html?text=Текст&x=50&y=50&font_color=%23000000&font_size=20&font_name=Arial%20Narrow&image_url=https://media.discordapp.net/attachments/1169281180785451168/1237808743316586657/image.png?ex=663cfeb9&is=663bad39&hm=731aff1d329c9dfc69d879ee60cd79919412d5e37361d100bf5bf5177ab8d166&=&format=webp&quality=lossless">
+    
     <title>lLoki</title>
     <style>
         img {
@@ -40,11 +42,6 @@
         }
         image.src = imageUrl;
 
-        // Создаем и добавляем тег meta для Twitter после определения imageUrl
-        const twitterMeta = document.createElement('meta');
-        twitterMeta.setAttribute('property', 'twitter:image');
-        twitterMeta.setAttribute('content', imageUrl);
-        document.head.appendChild(twitterMeta);
     </script>
 </body>
 </html>
