--- a/result.html
+++ b/result.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property="twitter:image" content="https://lloki2022.github.io/privacy/result.html?text=Текст&x=50&y=50&font_color=%23eb0f0f&font_size=20&font_name=Yu%20Gothic&image_url=https://img001.prntscr.com/file/img001/Dndak4wgSEyTTDngKhFovg.png">
+    <!-- Метаданные для Twitter -->
+<meta property="twitter:image" content="https://lloki2022.github.io/privacy/result.html?text=Текст&x=50&y=50&font_color=%23eb0f0f&font_size=20&font_name=Yu%20Gothic&image_url=https://img001.prntscr.com/file/img001/Dndak4wgSEyTTDngKhFovg.png">
+
     
     <title>lLoki</title>
     <style>
