--- a/result.html
+++ b/result.html
@@ -17,7 +17,7 @@
 <body>
     <canvas id="resultCanvas"></canvas> <!-- используем canvas для рисования текста на изображении -->
     
-    <script>
+    <script defer>
         // Получаем URL изображения и параметры текста и настроек
         const urlParams = new URLSearchParams(window.location.search);
         const imageUrl = urlParams.get('image_url');
