--- a/result.html
+++ b/result.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <meta property="twitter:image" content="https://github.githubassets.com/assets/campaign-social-031d6161fa10.png">
+    //<meta property="twitter:image" content="https://github.githubassets.com/assets/campaign-social-031d6161fa10.png">
+    <img src="https://github.githubassets.com/assets/campaign-social-031d6161fa10.png" alt="Изображение" width="400" height="300">
     
     <title>lLoki</title>
     <style>
