--- a/result.html
+++ b/result.html
@@ -40,7 +40,7 @@
             ctx.fillStyle = fontColor;
             ctx.fillText(text, x, y);
         }
-        image.src = imageUrl;
+        // image.src = imageUrl;
 
     </script>
 </body>
