--- a/index.html
+++ b/index.html
@@ -1,40 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MCStatus</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-    }
-    pre {
-      background: #f4f4f4;
-      padding: 1em;
-      border: 1px solid #ddd;
-      border-radius: 5px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>MC Server Status</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-  <h1>MCStatus</h1>
-  <div id="content">
-    <p>Loading...</p>
-  </div>
-  <script>
-    async function fetchMCStatus() {
-      try {
-        const response = await fetch('https://api.mcstatus.io/v2/status/java/s32.mcskill.net:25530');
-        if (!response.ok) {
-          throw new Error('Network response was not ok');
-        }
-        const data = await response.json();
-        document.getElementById('content').innerHTML = '<pre>' + JSON.stringify(data, null, 2) + '</pre>';
-      } catch (error) {
-        document.getElementById('content').innerHTML = '<p>Error fetching data: ' + error.message + '</p>';
-      }
-    }
-    fetchMCStatus();
-  </script>
+    <div id="mcStatus"></div>
+
+    <script>
+        $(document).ready(function() {
+            $.getJSON('https://api.mcstatus.io/v2/status/java/s32.mcskill.net:25530', function(data) {
+                var html = '<pre>' + JSON.stringify(data, null, 2) + '</pre>';
+                $('#mcStatus').html(html);
+            });
+        });
+    </script>
 </body>
 </html>
